# spotify-integration

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  env.sample  pyproject.toml
project/: response_handlers.py
project/project/: celery.py  settings.py  urls.py
project/spotify_integration/: admin.py  models.py  schemes.py  serializers.py  tasks.py  urls.py  views.py
project/spotify_integration/management/commands/: sync_spotify_data.py  update_spotify_tokens.py
project/spotify_integration/migrations/: 0001_initial.py  0002_alter_socialcredential_access_token_and_more.py  0003_socialpost.py  0004_socialpost_post_type_alter_socialpost_external_url.py  0005_socialpost_external_user_url.py
project/spotify_integration/services/: __init__.py  spotify_auth_service.py  spotify_data_service.py  spotify_service.py  storage_service.py
