[project]
name = "spotify_integration"
version = "0.1.0"
description = "Spotify intergration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.2",
    "django>=5.2.1",
    "djangorestframework>=3.16.0",
    "environs>=14.2.0",
    "flower>=2.0.1",
    "psycopg2-binary>=2.9.10",
    "redis>=6.2.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=5.2.0",
]
prod = [
    "gunicorn>=23.0.0",
]
